# telegram-game

./: .gitignore  CURRENCY_UPDATE.md  README-financial-pro.md  README-life-tools.md  README-pdf-export.md  README-python-dashboard.md  README.md  UPDATE_STATUS.md  finalize_vps.sh  financial-calculator-pro.html  setup_vps.sh  wrangler.toml
backend/: main.py  requirements.txt  start.sh
backend-rust/: Cargo.toml  test_endpoints.sh  wrangler.toml
backend-rust/src/: calculators.rs  lib.rs  models.rs
frontend-dist/: index-main.html  index.html  life-tools-hub.html
