[package]
name = "backend_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
plotters = "0.3.7"
plotters-svg = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
worker = { version = "0.7.2", features = ["http"] }

[package.metadata.worker]
wasm-opt = false
